# dialog

./: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.test  PROGRESS.md  README.md  build_xcframework.sh  dialog_cli_rewrite_prd.md  dialog_integration_PRD.md  dialog_lib_PRD.md  dialog_prd.md  dialog_tui_cli_interop_test.md  dialog_tui_prd.md  dialog_tui_real_migration_plan.md  e2e_test.sh  gemini_prd.md  generate_swift_bindings.sh  justfile  keypackages_research.md  lessons_learned_mls_storage.md  messages_messed_up_sqlite.md  opus_prd.md  prompt.pbmd  realtime_messaging_plan.md  simple_cli_test.rs  sqlite_storage_is_hard.md  test_e2e_encryption.sh  test_e2e_encryption_persistent.sh  tui_ux_notes.md  tui_ux_prd.md  whitenoise_interop_prd.md
dialog_cli/: Cargo.toml  README.md
dialog_cli/src/: main.rs  main_old.rs
dialog_cli/tests/: cli.rs  memory_storage_full_test.rs  memory_storage_test.rs  mls_bob_sends_first.rs  mls_cross_epoch.rs  mls_exporter_secret.rs  mls_message_before_accept.rs  mls_persistence.rs  mls_simple.rs  mls_storage_roundtrip.rs
dialog_client/: Cargo.toml  README.md  build.rs
dialog_client/src/: dialog_client.udl  lib.rs  simple_client.rs  simple_dialog_client.udl  uniffi_bindings.rs
dialog_deploy/: Cargo.toml  README.md
dialog_ios/: Package.swift
dialog_ios/.build/index-build/arm64-apple-macosx/debug/index/db/v13/p20170--b2eccd/: lock.mdb
dialog_lib/: Cargo.toml
dialog_lib/examples/: config_demo.rs
dialog_lib/src/: config.rs  errors.rs  lib.rs  mls_service.rs  mock_service.rs  real_service.rs  service.rs  storage.rs  types.rs
dialog_lib/tests/: contact_tests.rs  profile_tests.rs  test_helpers.rs
dialog_relay/: Cargo.toml  README.md
dialog_relay/src/: lib.rs  main.rs
dialog_tui/: Cargo.toml  ENUM_REFACTOR_DEMO.md  README.md
dialog_tui/src/: app.rs  error.rs  main.rs  theme.rs  ui.rs
dialog_tui/src/model/: message.rs  mod.rs  state.rs
dialog_tui/src/storage/: mod.rs
dialog_tui/src/ui/: mod.rs
dialog_tui/src/update/: mod.rs
integration/: Cargo.toml  README.md  ht_tui_automation.py  test_automated_interop.sh  test_cli_create_group.sh  test_tui_cli_interop.sh
integration/examples/: whitenoise_integration_example.rs
integration/src/: automation_coordination.rs  ht_mcp_automation.rs  lib.rs  main.rs  test_scenarios.rs  welcome_compatibility.rs  whitenoise_coordination.rs  whitenoise_interop.rs
integration/tests/: tui_cli_interop.rs  whitenoise_integration_test.rs
ios/: README.md
ios/dialog/: PROBLEMS.md
ios/dialog/dialog/: ContentView.swift  Info.plist  dialog.entitlements  dialogApp.swift
ios/dialog/dialog.xcodeproj/: project.pbxproj
ios/dialog/dialog.xcodeproj/project.xcworkspace/xcuserdata/futurepaul.xcuserdatad/: UserInterfaceState.xcuserstate
ios/dialog/dialogTests/: DialogClientTests.swift  dialogTests.swift
ios/dialog/dialogUITests/: dialogUITests.swift  dialogUITestsLaunchTests.swift
