[package]
name = "dialog_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
nostr = { workspace = true }
nostr-mls = { workspace = true }
nostr-mls-sqlite-storage = { workspace = true }
nostr-sdk = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
hex = "0.4.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
anyhow = "1.0"
