[package]
name = "dialog_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.98"
nostr = { version = "0.42", features = ["nip44"] }
nostr-sdk = "0.42.0"
openmls = "0.6.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1"
tracing = "0.1.41"
uniffi = "0.29.3"
thiserror = "1.0"

[dev-dependencies]
uniffi = { version = "0.29.3", features = ["cli"] }

