[package]
name = "dialog_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.41"
hex = "0.4.3"
nostr.workspace = true
nostr-mls.workspace = true
nostr-mls-memory-storage.workspace = true
nostr-sdk.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
