[package]
name = "dialog_tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
atty = "0.2.14"
chrono = { version = "0.4.41", features = ["serde"] }
crossterm = "0.29.0"
dotenv.workspace = true
hex = "0.4.3"
home = "0.5.11"
nostr = { workspace = true }
nostr-mls = { workspace = true }
nostr-mls-sqlite-storage = { workspace = true }
nostr-mls-storage = { workspace = true }
nostr-sdk = { workspace = true }
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.17.0", features = ["v4"] }
