[package]
name = "dialog_tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# TUI framework
ratatui = "0.28"
tui-textarea = { version = "0.4", features = ["crossterm"] }
crossterm = { version = "0.27", features = ["bracketed-paste"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# For fuzzy search
fuzzy-matcher = "0.3"

# Dialog library
dialog_lib = { version = "0.1.0", path = "../dialog_lib" }
clap = { workspace = true, features = ["derive"] }
dotenv.workspace = true
dirs = "6.0.0"
